--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
 
@@ -14,9 +14,9 @@
         <img height=60; src="download.jfif"/> 
         <nav>        
             <ul>
-                <li><a href="index.html"><b>Home</b></a></li>
+                <li><a href="home.html"><b>Home</b></a></li>
                 <li><a href="about.html"><b>About</b></a></li>
-                <li><a href="contactMe.html"><b>Contact</b></a></li>
+                <li><a href="contactMe.html"><b>Contact Me</b></a></li>
             </ul>
         </nav>
     </header> 
@@ -47,7 +47,7 @@
     
         <div>
         <button>
-        <img height="200" width="200px" src= "https://i.pinimg.com/originals/3e/4a/8f/3e4a8f71d535699ba54457289f89b8a5.jpg"
+        <img height="200px" width="200px" src= "https://i.pinimg.com/originals/3e/4a/8f/3e4a8f71d535699ba54457289f89b8a5.jpg"
         alt="picture of University of Denver Pioneers Eagles team logo"/>
         <a href="https://denverpioneers.com/sports/mens-ice-hockey"><p>DU Pioneers official website</p></a>
         </button>
