--- a/contactMe.html
+++ b/contactMe.html
@@ -15,9 +15,9 @@
         <img height=60px src="download.jfif"/> 
         <nav>        
             <ul>
-                <li><a href="index.html"><b>Home</b></a></li>
+                <li><a href="home.html"><b>Home</b></a></li>
                 <li><a href="about.html"><b>About</b></a></li>
-                <li><a href="contactMe.html"><b>Contact</b></a></li>
+                <li><a href="contactMe.html"><b>Contact Me</b></a></li>
             </ul>
         </nav>
     </header> 
