--- a/contactMe.html
+++ b/contactMe.html
@@ -1,3 +1,5 @@
+<!--Contact Me page-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,7 +32,7 @@
         </div>
       
     <div>
-    <table class="social">
+        <table>
         <h3>Visit my social media:</h3>    
         <tr>
         <th>Site</th>
