--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@ Use only external CSS file (no internal or inline styling); every element must b
 Create style rules using class, id, and element selectors.-->
 
 <!--Home page-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,7 @@ Create style rules using class, id, and element selectors.-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First HTML website</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="home-about.css">
 </head>
 <body>
 
@@ -88,7 +89,7 @@ Create style rules using class, id, and element selectors.-->
             <li align="left">Home town: Halifax</li>
             <li align="left">Age: 27</li>
             <li align="left">Birth Sign: Virgo</li>
-            <li align="left">Notable Award: Calder Trophy 2014, Lady Bing Trophy 2017</li>
+            <li align="left">Awards: Calder Trophy 2014, Lady Byng Trophy 2020</li>
             <li align="left">Age at first NHL game: 18</li>
         </ul>
         </button>
